#5 fix: z-footer alignments

--- a/src/components/footer/z-footer/styles.css
+++ b/src/components/footer/z-footer/styles.css
@@ -198,7 +198,7 @@ footer > section.bottom > div.logo > p > span {
   footer > section.top > nav {
     height: fit-content;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: calc((100% - 54px) / 4) auto;
     grid-template-rows: 1fr;
     grid-column-gap: 18px;
     padding: var(--basex2) 0 var(--basex1) 0;
@@ -228,7 +228,7 @@ footer > section.bottom > div.logo > p > span {
 
   footer > section.top > nav > .content > ul {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: calc((100% - 36px) / 3) calc((100% - 36px) / 3) auto;
     grid-column-gap: 18px;
     height: auto;
     align-items: stretch;
@@ -238,7 +238,7 @@ footer > section.bottom > div.logo > p > span {
   }
 
   footer > section.top > nav > .content > ul > li {
-    margin: 0 var(--basex1) 0 0;
+    margin: 0;
     padding: var(--half-x1) 0px;
     border: none;
   }
@@ -250,9 +250,10 @@ footer > section.bottom > div.logo > p > span {
   }
 
   footer > section.bottom {
-    grid-template-columns: calc(4 * var(--basex8)) 1fr 2fr;
+    grid-template-columns: calc((100% - 54px) / 4) calc((100% - 54px) / 4) auto;
+    grid-column-gap: 18px;
     background-color: var(--bg-grey-900);
-    padding: 0 var(--basex2);
+    padding: 0 var(--basex4);
   }
 
   footer > section.bottom > div.item {
@@ -266,7 +267,6 @@ footer > section.bottom > div.logo > p > span {
   footer > section.bottom > div.item:nth-child(2) {
     order: 2;
     border-bottom: none;
-    margin: 0px var(--basex2) 0px var(--basex2);
   }
 
   footer > section.bottom > div.item > p {
@@ -281,7 +281,7 @@ footer > section.bottom > div.logo > p > span {
 
   footer > section.bottom > div.logo > z-logo {
     height: 39px;
-    width: 220px;
+    width: auto;
   }
 
   footer > section.bottom > div.bottom-links {
@@ -291,9 +291,10 @@ footer > section.bottom > div.logo > p > span {
 
   footer > section.bottom > div.bottom-links > ul {
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 18px;
     height: 54px;
-    margin: 0 var(--half-x1);
+    margin: 0;
     padding: 0;
     font-size: 12px;
   }
